# EverythingClaudeMCP

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml
.claude/: settings.json
.github/workflows/: deploy.yml
data/index/: centroid.npy  embeddings.npy  manifest.json
deploy/: .env.prod.example  docker-compose.prod.yml  setup-aws.sh
deploy/nginx/: nginx.conf
docs/: CLAUDE.md.template  PRD.md  architecture.md  mcp-demo-test-report.md  test-report.md  usage-guide.md
landing/: middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
landing/components/: Aurora.tsx  CopyBlock.tsx  Examples.tsx  FAQ.tsx  Footer.tsx  GoogleAnalytics.tsx  Hero.tsx  HowItWorks.tsx  MouseSpotlight.tsx  Nav.tsx  QuickStart.tsx  RevealOnScroll.tsx  Tools.tsx
landing/e2e/: landing.spec.ts
landing/lib/: api-keys.ts  auth.ts  blog.ts
landing/prisma/: schema.prisma
landing/public/: llms-full.txt  llms.txt
mcp-server/: package-lock.json  package.json
mcp-server/src/: auth-middleware.ts  client.ts  index.ts  server-http.ts  types.ts
scripts/: add_defi_skill.py  cloud-start.sh  colab_compile.ipynb  compile.py  demo_mcp_e2e.py  demo_workflow.py  serve.py  verify_tensors.py
src/adapter/: __init__.py  chat_template.py  config.py  model_wrapper.py  realignment.py
src/api/: __init__.py  app.py  middleware.py  routes.py  schemas.py
src/compiler/: __init__.py  cli.py  delta.py  (+4 more)
(+51 files in other folders)
